# serialize.rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly-fuzz.yml
benches/: throughput.rs
examples/: packet.rs  wire_interop.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hostile_read.rs  round_trip.rs
interop/: golden.cpp
src/: bitpacker.rs  lib.rs  measure_stream.rs  read_stream.rs  stream.rs  write_stream.rs
tests/: differential.rs  serialize.rs
