[package]
name = "serialize"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A simple bitpacking serializer for Rust, wire compatible with the C++ serialize library"
repository = "https://github.com/mas-bandwidth/serialize.rs"
license = "BSD-3-Clause"
keywords = ["serialization", "bitpacking", "networking", "gamedev"]
categories = ["game-development", "network-programming", "encoding"]

[dependencies]
