[package]
name = "serialize"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "A simple bitpacking serializer for Rust, wire compatible with the C++ serialize library"
repository = "https://github.com/mas-bandwidth/serialize.rs"
license = "BSD-3-Clause"
keywords = ["serialization", "bitpacking", "networking", "gamedev"]
categories = ["game-development", "network-programming", "encoding"]
# repo infrastructure that does not belong in the crates.io package; the fuzz/ crate is
# excluded automatically as a nested package
exclude = [".github/", "interop/", "CLAUDE.md"]

[dependencies]

[[bench]]
name = "throughput"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# deliberate port style: this is a bit-level codec and narrowing/sign casts are pervasive and
# intentional, mirroring the C++ library (which disables the equivalent warnings)
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# ReadStream lives in read_stream.rs, matching the Go port's layout
module_name_repetitions = "allow"
# test values are copied verbatim from the C++ test suite so the suites stay diffable;
# inserting separators would defeat that
unreadable_literal = "allow"
