[package]
name = "serialize-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serialize = { path = ".." }

[[bin]]
name = "hostile_read"
path = "fuzz_targets/hostile_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "round_trip"
path = "fuzz_targets/round_trip.rs"
test = false
doc = false
bench = false

[workspace]
